--- a/package.json
+++ b/package.json
@@ -1,79 +1,83 @@
 {
-	"name": "@goede/vue-gradientpicker",
-	"version": "0.1.5",
-	"license": "MIT",
-	"author": "Bobbie Goede <bobbiegoede@gmail.com>",
-	"keywords": [
-		"gradient",
-		"gradientpicker",
-		"picker",
-		"vue",
-		"vuejs"
-	],
-	"main": "dist/vue-gradientpicker.umd.js",
-	"module": "dist/vue-gradientpicker.esm.js",
-	"unpkg": "dist/vue-gradientpicker.min.js",
-	"browser": {
-		"./sfc": "src/vue-gradientpicker.vue"
-	},
-	"files": [
-		"dist/*",
-		"src/*"
-	],
-	"scripts": {
-		"build": "cross-env NODE_ENV=production rollup --config rollup.config.js",
-		"build:umd": "cross-env NODE_ENV=production rollup --config rollup.config.js --format umd",
-		"build:es": "cross-env NODE_ENV=production rollup --config rollup.config.js --format es",
-		"build:unpkg": "cross-env NODE_ENV=production rollup --config rollup.config.js --format iife"
-	},
-	"dependencies": {
-		"d3-color": "^1.2.3",
-		"d3-interpolate": "^1.3.2",
-		"vue": "^2.6.6"
-	},
-	"devDependencies": {
-		"@vue/cli-plugin-babel": "^3.0.0",
-		"@vue/cli-plugin-eslint": "^3.0.0",
-		"@vue/cli-service": "^3.0.0",
-		"babel-eslint": "^10.0.1",
-		"cross-env": "^5.2.0",
-		"eslint": "^5.8.0",
-		"eslint-plugin-vue": "^5.0.0",
-		"minimist": "^1.2.0",
-		"node-sass": "^4.11.0",
-		"rollup": "^1.4.1",
-		"rollup-plugin-babel": "^4.3.2",
-		"rollup-plugin-buble": "^0.19.6",
-		"rollup-plugin-commonjs": "^9.2.1",
-		"rollup-plugin-replace": "^2.1.0",
-		"rollup-plugin-terser": "^4.0.4",
-		"rollup-plugin-vue": "^4.7.2",
-		"sass-loader": "^7.1.0",
-		"vue-template-compiler": "^2.5.21"
-	},
-	"eslintConfig": {
-		"root": true,
-		"env": {
-			"node": true
-		},
-		"extends": [
-			"plugin:vue/essential",
-			"eslint:recommended"
-		],
-		"rules": {},
-		"parserOptions": {
-			"parser": "babel-eslint"
-		}
-	},
-	"postcss": {
-		"plugins": {
-			"autoprefixer": {}
-		}
-	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not ie <= 8"
-	],
-	"description": "## Project setup ``` npm install ```"
+  "name": "@goede/vue-gradientpicker",
+  "version": "0.1.5",
+  "license": "MIT",
+  "author": "Bobbie Goede <bobbiegoede@gmail.com>",
+  "keywords": [
+    "gradient",
+    "gradientpicker",
+    "picker",
+    "vue",
+    "vuejs"
+  ],
+  "main": "dist/vue-gradientpicker.umd.js",
+  "module": "dist/vue-gradientpicker.esm.js",
+  "unpkg": "dist/vue-gradientpicker.min.js",
+  "browser": {
+    "./sfc": "src/vue-gradientpicker.vue"
+  },
+  "files": [
+    "dist/*",
+    "src/*"
+  ],
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "cross-env NODE_ENV=production rollup --config rollup.config.js",
+    "build:umd": "cross-env NODE_ENV=production rollup --config rollup.config.js --format umd",
+    "build:es": "cross-env NODE_ENV=production rollup --config rollup.config.js --format es",
+    "build:unpkg": "cross-env NODE_ENV=production rollup --config rollup.config.js --format iife"
+  },
+  "dependencies": {
+    "d3-color": "^1.2.3",
+    "d3-interpolate": "^1.3.2",
+    "vue": "^2.6.6"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.0.0",
+    "@vue/cli-plugin-eslint": "^3.0.0",
+    "@vue/cli-service": "^3.0.0",
+    "babel-eslint": "^10.0.1",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "minimist": "^1.2.0",
+    "node-sass": "^4.11.0",
+    "rollup": "^1.4.1",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-buble": "^0.19.6",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-vue": "^4.7.2",
+    "sass-loader": "^7.1.0",
+    "vue-template-compiler": "^2.5.21"
+  },
+  "prettier": {
+    "printWidth": 100
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
+  "description": "## Project setup ``` npm install ```"
 }
