--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@goede/vue-gradientpicker",
-  "version": "0.1.6",
+  "version": "1.0.0",
   "license": "MIT",
   "author": "Bobbie Goede <bobbiegoede@gmail.com>",
   "keywords": [
@@ -33,6 +33,11 @@
     "vue": "^2.6.12"
   },
   "devDependencies": {
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
     "@vue/cli-plugin-babel": "^4.5.8",
     "@vue/cli-plugin-eslint": "^4.5.8",
     "@vue/cli-service": "^4.5.8",
@@ -43,10 +48,6 @@
     "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
     "rollup": "^2.32.1",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-buble": "^0.19.6",
-    "rollup-plugin-commonjs": "^9.2.1",
-    "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.9",
     "sass-loader": "^10.0.3",
