--- a/package.json
+++ b/package.json
@@ -1,71 +1,52 @@
 {
-  "name": "@goede/vue-gradientpicker",
-  "version": "1.0.3",
-  "license": "MIT",
-  "author": "Bobbie Goede <bobbiegoede@gmail.com>",
-  "repository": {
-	"type" : "git",
-	"url" : "https://github.com/bobbiegoede/vue-gradientpicker"
-  },
-  "keywords": [
-    "gradient",
-    "gradientpicker",
-    "picker",
-    "vue",
-    "vuejs"
-  ],
-  "main": "dist/vue-gradientpicker.umd.js",
-  "module": "dist/vue-gradientpicker.esm.js",
-  "unpkg": "dist/vue-gradientpicker.min.js",
-  "browser": {
-    "./sfc": "src/vue-gradientpicker.vue"
-  },
-  "files": [
-    "dist/*",
-    "src/*"
-  ],
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "cross-env NODE_ENV=production rollup --config rollup.config.js",
-    "build:umd": "cross-env NODE_ENV=production rollup --config rollup.config.js --format umd",
-    "build:es": "cross-env NODE_ENV=production rollup --config rollup.config.js --format es",
-    "build:unpkg": "cross-env NODE_ENV=production rollup --config rollup.config.js --format iife"
-  },
-  "dependencies": {
-    "d3-color": "^2.0.0",
-    "d3-interpolate": "^2.0.1",
-    "vue": "^2.6.12"
-  },
-  "devDependencies": {
-    "@rollup/plugin-babel": "^5.2.1",
-    "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-replace": "^2.3.3",
-    "@vue/cli-plugin-babel": "^4.5.8",
-    "@vue/cli-plugin-eslint": "^4.5.8",
-    "@vue/cli-service": "^4.5.8",
-    "babel-eslint": "^10.1.0",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.11.0",
-    "eslint-plugin-vue": "^7.1.0",
-    "minimist": "^1.2.5",
-    "node-sass": "^4.14.1",
-    "rollup": "^2.32.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^5.1.9",
-    "sass-loader": "^10.0.3",
-    "vue-template-compiler": "^2.6.12"
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
-  "description": "## Project setup ``` npm install ```"
+	"name": "@goede/vue-gradientpicker",
+	"version": "1.0.3",
+	"description": "## Project setup ``` npm install ```",
+	"author": "Bobbie Goede <bobbiegoede@gmail.com>",
+	"scripts": {
+		"dev": "vite",
+		"build": "vue-tsc --noEmit && vite build",
+		"preview": "vite preview"
+	},
+	"main": "dist/vue-gradientpicker.umd.js",
+	"module": "dist/vue-gradientpicker.esm.js",
+	"browser": {
+		"./sfc": "src/vue-gradientpicker.vue"
+	},
+	"unpkg": "dist/vue-gradientpicker.min.js",
+	"files": [
+		"dist/*"
+	],
+	"dependencies": {
+		"@goede/vue-gradientpicker": "^1.0.3",
+		"d3-color": "^3.0.1",
+		"d3-interpolate": "^3.0.1",
+		"vue": "^3.2.31"
+	},
+	"devDependencies": {
+		"@types/d3-color": "^3.0.2",
+		"@types/d3-interpolate": "^3.0.1",
+		"@vitejs/plugin-vue": "^2.2.0",
+		"sass": "^1.49.7",
+		"typescript": "^4.5.5",
+		"vite": "^2.8.2",
+		"vue-tsc": "^0.31.4"
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	],
+	"keywords": [
+		"gradient",
+		"gradientpicker",
+		"picker",
+		"vue",
+		"vuejs"
+	],
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/bobbiegoede/vue-gradientpicker"
+	}
 }
