--- a/package.json
+++ b/package.json
@@ -5,38 +5,62 @@
 	"author": "Bobbie Goede <bobbiegoede@gmail.com>",
 	"scripts": {
 		"dev": "vite",
-		"build": "vue-tsc --noEmit && vite build",
+		"build": "vite build && vue-tsc --project tsconfig.build.json --emitDeclarationOnly",
+		"test": "vitest",
+		"cypress": "cypress open --component --browser chromium",
 		"preview": "vite preview"
 	},
-	"main": "dist/vue-gradientpicker.umd.js",
-	"module": "dist/vue-gradientpicker.esm.js",
-	"browser": {
-		"./sfc": "src/vue-gradientpicker.vue"
+	"exports": {
+		".": {
+			"require": "./dist/vue-gradientpicker.cjs.js",
+			"import": "./dist/vue-gradientpicker.es.js"
+		},
+		"./GradientPicker": {
+			"require": "./dist/vue-gradientpicker.cjs.js",
+			"import": "./dist/vue-gradientpicker.es.js"
+		},
+		"./dist/style.css": {
+			"import": "./dist/style.css"
+		}
 	},
-	"unpkg": "dist/vue-gradientpicker.min.js",
+	"types": "./dist/GradientPicker.vue.d.ts",
+	"main": "./dist/vue-gradientpicker.cjs.js",
+	"module": "./dist/vue-gradientpicker.es.js",
 	"files": [
 		"dist/*"
 	],
 	"dependencies": {
-		"@goede/vue-gradientpicker": "^1.0.3",
-		"d3-color": "^3.0.1",
+		"d3-color": "^3.1.0",
 		"d3-interpolate": "^3.0.1",
-		"vue": "^3.2.31"
+		"vue": "^3.2.45"
 	},
 	"devDependencies": {
-		"@types/d3-color": "^3.0.2",
+		"@rushstack/eslint-patch": "^1.2.0",
+		"@testing-library/vue": "^7.0.0",
+		"@types/d3-color": "^3.1.0",
 		"@types/d3-interpolate": "^3.0.1",
-		"@vitejs/plugin-vue": "^2.2.0",
-		"sass": "^1.49.7",
-		"typescript": "^4.5.5",
-		"vite": "^2.8.2",
-		"vue-tsc": "^0.31.4"
+		"@types/node": "^18.11.12",
+		"@vitejs/plugin-vue": "^4.0.0",
+		"@vitest/browser": "^0.34.3",
+		"@vitest/ui": "^0.34.3",
+		"@vue/eslint-config-typescript": "^11.0.2",
+		"@vue/test-utils": "^2.4.1",
+		"@vueuse/core": "^9.6.0",
+		"cypress": "^12.17.4",
+		"eslint": "^8.29.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-vue": "^9.8.0",
+		"happy-dom": "^10.11.0",
+		"prettier": "^2.8.1",
+		"prettier-eslint": "^15.0.1",
+		"sass": "^1.56.2",
+		"standard-version": "^9.5.0",
+		"typescript": "^4.9.4",
+		"vite": "^4.0.0",
+		"vitest": "^0.34.3",
+		"vue-tsc": "^1.0.12",
+		"webdriverio": "^8.15.9"
 	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not ie <= 8"
-	],
 	"keywords": [
 		"gradient",
 		"gradientpicker",
